--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <main>
@@ -17,7 +19,26 @@
             <div id="formulario">
                 <h1>login</h1>
                 <p>Seja Bemvindo(a) novamente, faça login para acessar sua conta e poder fazer as configurações no seu ambiente</p>
-                <form action="login.php" method="post">
+
+                <form action="login.php" method="post" autocomplete="on">
+
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            person
+                            </span>
+                        <input type="email" name="Login" id="ilogin" placeholder="seu E-mail" autocomplete="email" required maxlength="30">
+                        <label for="ilogin">Login</label>
+                    </div>
+
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            vpn_key
+                            </span>
+                        <input type="password" name="senha" id="isenha" placeholder="sua Senha" autocomplete="current-password" required maxlength="10">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="ENTRAR">
+                    <button>esqueci a senha</button>
 
                 </form>
 
