--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             person
                             </span>
                         <input type="email" name="Login" id="ilogin" placeholder="seu E-mail" autocomplete="email" required maxlength="30">
-                        <label for="ilogin">Login</label>
+                        <label for="ilogin"></label>
                     </div>
 
                     <div class="campo">
@@ -35,10 +35,11 @@
                             vpn_key
                             </span>
                         <input type="password" name="senha" id="isenha" placeholder="sua Senha" autocomplete="current-password" required maxlength="10">
-                        <label for="isenha">Senha</label>
+                        <label for="isenha"></label>
                     </div>
-                    <input type="submit" value="ENTRAR">
-                    <button>esqueci a senha</button>
+                    <input type="submit" value="Entrar">
+                    <a class="botao" href="#">Esqueci a senha</a>
+
 
                 </form>
 
